fixed spacing issue

--- a/static/style.css
+++ b/static/style.css
@@ -44,7 +44,7 @@ html, body
 
 #content
 {
-  height: 80vh;
+  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
